5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1596_1015.log
== TEST (2019-03-21 19:33:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("escolha um numero "))
y= int(input("escolha um numero "))
z= int(input("escolha um numero "))
print(min(x, y, z))
-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:36:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("escolha um numero "))
y= int(input("escolha um numero "))
z= int(input("escolha um numero "))
menor_numero=min(x, y, z)
maior_numero=max(x, y, z)
-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:37:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("escolha um numero "))
y= int(input("escolha um numero "))
z= int(input("escolha um numero "))
menor_numero=min(x, y, z)
maior_numero=max(x, y, z)
print(menor_numero)
print(maior_numero)
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:39:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("escolha um numero "))
y= int(input("escolha um numero "))
z= int(input("escolha um numero "))
menor_numero=min(x, y, z)
maior_numero=max(x, y, z)
intermediario= x+y+z-menor_valor-menor_valor
print(menor_numero)
print(intermediario)
print(maior_numero)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    intermediario= x+y+z-menor_valor-menor_valor
NameError: name 'menor_valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:40:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("escolha um numero "))
y= int(input("escolha um numero "))
z= int(input("escolha um numero "))
menor_numero=min(x, y, z)
maior_numero=max(x, y, z)
intermediario= x+y+z-menor_numero-maior_numero
print(menor_numero)
print(intermediario)
print(maior_numero)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:40:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("escolha um numero "))
y= int(input("escolha um numero "))
z= int(input("escolha um numero "))
menor_numero=min(x, y, z)
maior_numero=max(x, y, z)
intermediario= x+y+z-menor_numero-maior_numero
print(menor_numero)
print(intermediario)
print(maior_numero)
-- EXECUTION TIME:
0.159879
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
